# portable-flask

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  wsgi.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  docker-publish.yml
app/: __init__.py  routes.py
config/: settings.py
tests/: test_routes.py
